@@ -1,2 +1,4 @@
 W:  7:function1: Dangerous default value [] as argument
 W: 11:function2: Dangerous default value HEHE ({}) as argument
+W: 19:function4: Dangerous default value set() as argument
+W: 29:function6: Dangerous default value GLOBAL_SET (__builtin__.set) as argument
